--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@ body {
      font-family: 'Poppins', sans-serif;
 }
  .container {
-     background-color: #008000;
+     background: linear-gradient(320deg, #eb92be, #ffef78, #63c9b4);
      border-radius: 10px;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
      padding: 20px;
@@ -110,7 +110,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease, border-color 0.3s ease; 
   border-color: #ccc;
-  background-color: #fff;
+  background: linear-gradient(320deg, #eb92be, #ffef78, #63c9b4);
 }
 #listOfCommands, #listOfCommandsEvent, #prefixOfCommands, #adminOfCommands {
   border: none !important;
